refactor: 全面代码规范化和功能增强
后端 (1335 files):
- 添加完整的 Javadoc 文档注释
- 统一代码风格和命名规范
- 新增客户服务模块 (clientservice)
- 新增合同模板相关服务
- 完善各模块的 DTO 和 Command 类

前端 (155 files):
- 完善系统配置组件 (CacheTab, LoginLogTab, SessionTab)
- 优化合同管理和项目管理界面
- 改进打印和 Markdown 工具函数
- 更新 Playwright 测试配置

基础设施:
- 完善 Docker SSL 配置和文档
- 更新数据库初始化脚本
- 增强测试脚本和辅助工具
- 添加 Prometheus 中文指南